--- a/JavascriptQueue.html
+++ b/JavascriptQueue.html
@@ -46,4 +46,6 @@ q.print(); // prints the queue
 q.dequeue(); //removes and returns the item at the beginning of the array
 console.log(q.front()); //returns the item at index 0
 q.print();
+q.enqueue("V");
+q.print();
 </script>
